Fixed larger than screen view on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
-.App{
-    background-color: var(--light-1-color);
-    min-height: calc(100vh - var(--gutter) );
-    padding-top: 0;
-  }
-  
 .App-Container{
     padding: var(--gutter);
 }
